apps/wac-tg-jv-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wac-tg-jv-backend
spec:
  replicas: 1
  selector:
    matchLabels:
        pod: wac-tg-jv-backend
  template:
    metadata:
      labels:
        pod: wac-tg-jv-backend
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: wac-tg-jv
        name: wac-tg-jv-backend
        image: xgolis/wac-tg-jv-backend
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
              memory: "32M"
              cpu: "0.1"
          limits:
              memory: "320M"
              cpu: "0.3"
