apps/wac-tg-jv-backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wac-tg-jv-backend
spec:
  selector:
    pod: wac-tg-jv-backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
